[package]
name = "fall_back"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
scraper = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
