[package]
name = "fall_back"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38",default-features = false, features = ["clock"]}
reqwest = {version = "0.12.5",default-features = false, features = ["json", "rustls-tls"]}
log = "0.4.22"
scraper = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.118"
simplelog = "0.12.2"
tokio = { version = "1.38.0", default-features = false, features = ["rt", "macros"]}


[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
